Correct margin to align with the navbar rework

--- a/src/scss/layout/body.scss
+++ b/src/scss/layout/body.scss
@@ -1,5 +1,5 @@
 .container {
-    margin: 0 3rem !important;
+    margin: 0 3.75rem !important;
 }
 
 @media screen and (max-width: 1087px) {
